# calendar-api-3dead8d4

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  alembic.ini  coverage.out  go.mod  go.sum  pyproject.toml  swagger.yaml
.github/scripts/: check_version_bump.py
.github/workflows/: build-deploy.yml  build.yml  cd.yml  ci.yml  deploy-common.yml  ephemeral-deploy.yml  pr-cleanup.yml  pr-teardown.yml  production-deploy.yml  staging-deploy.yml  terraform-deployment.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docker/init-db/: 01-init.sql
docs/: FAQ.md  architecture.md  assumptions.md  data-model.md  domain-model.md  openapi.yaml  prd.md  project-layout.md  troubleshooting.md
docs/adr/: adr-001-platform-choice-for-api-hosting.md  adr-002-iac-tool-chocie.md  adr-003-database-archetype.md  adr-004-application-compute-platform.md  adr-005-api-language-framework.md  adr-006-secrets-management-strategy.md  adr-007-container-base-image-strategy.md  adr-008-cicd-strategy.md  adr-009-git-branching-strategy.md  adr-010-database-migration-orm-strategy.md  adr-011-monitoring-observability-strategy.md
scripts/: run_migrations.py
src/: auth.go  config.go  database.go  events_test.go  handlers.go  main.go  main.py  metrics.go  metrics_test.go  middleware.go  migrations.go  models.go  repository.go  version.go
src/api/v1/: calendars.py  debug.py  events.py  health.py  users.py
src/core/: auth.py  config.py  database.py  logging_config.py  router.py  security.py
src/database/: schema.sql
src/models/: __init__.py  base.py  calendar.py  calendar_event.py  user.py
src/schemas/: __init__.py  base.py  calendar.py  calendar_event.py  event.py  user.py
terraform/: .gitignore  acm.tf  alb.tf  backend.tf  doppler.tf  ecr.tf  ecs-migration.tf  ecs.tf  locals.tf  main.tf  network.tf  outputs.tf  provider.tf  rds.tf  security-groups.tf  terraform.tfvars.example  variables.tf
terraform/shared/: ecr.tf  github-oidc.tf
tests/: api_demo.ps1  api_demo.sh  conftest.py  main_test.go  test_auth.py  test_helpers.go  test_main.py  types.go
tests/api/: test_events.py  test_health.py
tests/fixtures/: events.json
